--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,18 @@
 // Specific CSS for your home-page
+.banner {
+   // background-image: url("banner-img.jpeg") no-repeat;
+  // background: linear-gradient(180deg,#22263f,rgba(33,41,94,.96));
+  background-image:linear-gradient(rgba(27,36,81,.6), rgba(27,36,81,.4)),url("banner-img.jpeg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  text-align: center;
+  h1 {
+    color: white;
+  }
+}
+
