--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DbImpact</title>
+    <title>Biswas Social Impact Advisors</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -16,5 +16,6 @@
     <%= render 'shared/flashes' %>
 
     <%= yield %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
