--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,23 @@
 <div class="banner">
-  <h1>Biswas Social Impact Advisors</h1>
+  <h1 class="big-text">Biswas Social Impact Advisors</h1>
 </div>
+<div class="text-big">
+  <h2>We believe private equity is about people, not transactions.</h2>
+</div>
+<div class="photos-divs pic-1"></div>
+<div class="text-big">
+  <h2>Trust</h2>
+  <p>WE EARN IT.</p>
+</div>
+<div class="photos-divs pic-2"></div>
+<div class="text-big">
+  <h2>Partnership </h2>
+  <p>WE EMPHASIZE IT.</p>
+</div>
+<div class="photos-divs pic-3"></div>
+<div class="text-big">
+  <h2>Value</h2>
+  <p>WE HELP YOU CREATE IT.</p>
+</div>
+<div class="photos-divs pic-4"></div>
+
