--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="banner">
-  <h1 class="big-text">Biswas Social Impact Advisors</h1>
+  <h1 class="big-text">Biswas Social Impact Advisory</h1>
+  
 </div>
 <div class="text-big">
   <h2>We believe private equity is about people, not transactions.</h2>
