--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: rgb(27,36,81);
-  height: 150px;
+  background:#e4eff1;
+  height: 100px;
 }
 
 .navbar-lewagon .navbar-collapse {
