--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,10 @@
 // Specific CSS for your home-page
+body[data-aos-duration='10000'] [data-aos],
+  [data-aos][data-aos][data-aos-duration='10000'] {
+    transition-duration: 10000ms;
+  }
+  // neeed to change the timing of AOS
 .banner {
-   // background-image: url("banner-img.jpeg") no-repeat;
-  // background: linear-gradient(180deg,#22263f,rgba(33,41,94,.96));
   background-image:linear-gradient(rgba(27,36,81,.6), rgba(27,36,81,.4)),url("banner-img.jpeg");
   display: flex;
   justify-content: center;
@@ -49,15 +52,54 @@ background-image: url("team-table.jpeg");
 font-size: 7em;
 }
 
+.box-image {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+}
+.box1:hover .box-image{
+  transform: scale(1.1);
+}
+.box {
+  background: red;
+  width: 100%;
+  height: 200px;
+  margin: 20px auto;
+}
 
+.box1 {
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  width: 100%;
+  height: 400px;
+  margin-top: 20px;
+  overflow: hidden;
+}
 
+.box3 {
+  background: green;
+    width: 100%;
+  height: 400px;
+  margin: 10px;
+}
 
+.text-inner {
+  background: rgba(100, 162, 205, .8);
+  width: 100%;
+  text-align: center;
+  padding: 30px;
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
 
+}
+.box1:hover {
+    background-size: contain;
+    background-repeat: no-repeat;
 
-
-
-
-
+  }
 
 
 
