--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner">
   <h1 class="big-text">Biswas Social Impact Advisory</h1>
-  
+
 </div>
 <div class="text-big">
   <h2>We believe private equity is about people, not transactions.</h2>
@@ -21,4 +21,54 @@
   <p>WE HELP YOU CREATE IT.</p>
 </div>
 <div class="photos-divs pic-4"></div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-7">
+      <div class="box" data-aos="zoom-in-right">
+
+      </div>
+      <div class="box">
+
+      </div>
+    </div>
+    <div class="col-5 ">
+      <div class="box1" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
+    <%= image_tag "https://images.unsplash.com/photo-1520052203542-d3095f1b6cf0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80", class: "box-image" %>
+        <div class="text-inner">
+          <p>Lorem ipsum, dolor sit.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-3">
+      <div class="box3">
+
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="box3">
+
+      </div>
+    </div>
+    <div class="col-3">
+      <div id="contact" class="box3">
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
 
