--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,176 @@
-.footer {
-  color: white;
-  background: rgb(27,36,81);
+.footer{
   text-align: center;
+  padding: 10px;
+  flex-wrap: wrap;
+  width: 100%;
+
+  p {
+    color: black;
+
+  @media (max-width: 540px) {
+      margin-bottom: 0px;
+    }
+  }
+
+  @media (max-width: 540px) {
+    padding: 8px;
+  }
+  ul {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  margin: 0 auto;
 }
+}
+
+
+#authors {
+  font-size: 8px;
+  margin: 0;
+  padding-bottom: 4px;
+  margin-top: 16px;
+
+  @media (max-width: 540px) {
+    font-size: 8px;
+    margin-top: 4px;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+  }
+}
+
+
+
+ul li.list {
+  position: relative;
+  list-style-type: none;
+  width: 40px;
+  height: 40px;
+  margin: 0 10px;
+  transform: rotate(-30deg) skew(25deg);
+
+   @media (max-width: 540px) {
+    margin: 0px 2px 0px 12px;
+    width: 25px;
+    height: 25px;
+    }
+}
+
+ul li span {
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 80%;
+  background: #000;
+  transition: 0.5s;
+  display: flex!important;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 16px!important;
+
+  @media (max-width: 540px) {
+    font-size: 10px !important;
+    width: 50%;
+    height: 50%;
+    margin: 0;
+  }
+}
+
+ul li.list:hover span:nth-child(5) {
+  transform: translate(40px,-40px);
+  opacity: 1;
+}
+
+ul li.list:hover span:nth-child(4) {
+  transform: translate(30px,-30px);
+  opacity: .8;
+}
+ul li.list:hover span:nth-child(3) {
+  transform: translate(20px,-20px);
+  opacity: .6;
+}
+ul li.list:hover span:nth-child(2) {
+  transform: translate(10px,-10px);
+  opacity: .4;
+}
+ul li.list:hover span:nth-child(1) {
+  transform: translate(0px,-0px);
+  opacity: .2;
+}
+
+
+ul li.list:nth-child(1) span {
+  background: #2169FA;
+}
+
+ul li.list:nth-child(2) span {
+  background: #1DA2F1;
+}
+
+ul li.list:nth-child(3) span {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+
+}
+
+ul li.list:nth-child(4) span {
+  background: #000;
+}
+
+.social {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.footer-img {
+  width: 115px!important;
+  padding-bottom: 12px;
+
+  @media (max-width: 540px) {
+    width: 75px !important;
+    padding-bottom: 4px;
+  }
+}
+
+.extra-links {
+  margin: 0 auto;
+}
+
+.extra-links ul {
+  display: block;
+}
+
+.extra-links li {
+  color: white;
+  font-size: 18px;
+  list-style: none;
+  text-align: left;
+
+  @media (max-width: 540px) {
+    text-align: center;
+  }
+}
+.second {
+  margin-right: 120px;
+}
+
+.height-144 {
+  height: 144px;
+
+  @media (max-width: 540px) {
+    height: 91px;
+  }
+}
+
+
+
+
+
