--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,8 +4,18 @@ body[data-aos-duration='10000'] [data-aos],
     transition-duration: 10000ms;
   }
   // neeed to change the timing of AOS
+  #myVideo {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  z-index: -1;
+  height: 100%;
+  object-fit: cover;
+}
+
 .banner {
-  background-image:linear-gradient(rgba(27,36,81,.6), rgba(27,36,81,.4)),url("banner-img.jpeg");
+  // background-image:linear-gradient(rgba(27,36,81,.6), rgba(27,36,81,.4)),url("banner-img.jpeg");
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,6 +26,8 @@ body[data-aos-duration='10000'] [data-aos],
   text-align: center;
   h1 {
     color: white;
+    font-size: 5em;
+    padding-bottom: 100px;
   }
 }
 .text-big {
@@ -23,19 +35,28 @@ body[data-aos-duration='10000'] [data-aos],
   margin: 50px auto;
   text-align: center;
    h2 {
-    font-size: 7em;
+    font-size: 4.5em;
    }
    p {
-    font-size: 3em;
+    font-size: 2em;
     color: rgb(100, 100 ,100);
    }
 }
+// css grid of pics
+
 .photos-divs {
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 600px;
 }
+.box-image-long {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+  transform: scale(1);
+}
+
 .pic-1 {
 background-image:url("ppl-shakehands.jpeg");
 }
@@ -60,11 +81,20 @@ font-size: 7em;
 .box1:hover .box-image{
   transform: scale(1.1);
 }
+.box3:hover .box-image{
+  transform: scale(1.1);
+}
+.box:hover .box-image-long{
+  transform: scale(1.1);
+}
 .box {
-  background: red;
   width: 100%;
   height: 200px;
   margin: 20px auto;
+  overflow: hidden;
+  background-size: auto;
+  background-position: center;
+  position: relative;
 }
 
 .box1 {
@@ -72,16 +102,18 @@ font-size: 7em;
   background-position: center;
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 420px;
   margin-top: 20px;
   overflow: hidden;
 }
 
 .box3 {
-  background: green;
-    width: 100%;
-  height: 400px;
-  margin: 10px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  width: 100%;
+  height: 290px;
+  overflow: hidden;
 }
 
 .text-inner {
@@ -93,7 +125,27 @@ font-size: 7em;
   position: absolute;
   top: 0;
   left: 0;
-
+}
+.text-inner-box3 {
+  background: rgba(200, 62, 105, .8);
+  width: 100%;
+  text-align: center;
+  padding: 30px;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.text-inner-box {
+  background: rgba(169, 130, 15, .8);
+  width: 35%;
+  text-align: center;
+  padding: 30px;
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
 }
 .box1:hover {
     background-size: contain;
@@ -102,7 +154,14 @@ font-size: 7em;
   }
 
 
-
+// contacts div
+.contacts {
+  display: flex;
+  ul {
+    padding: 20px;
+    list-style: none;
+  }
+}
 
 
 
