--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,57 @@
-<div class="footer">
-  <h2>EVERY SUCCESSFUL RELATIONSHIP STARTS WITH A CONVERSATION.</h2>
+<div class="footer mt-auto d-flex justify-content-space-between">
+
+<!--  <div class="extra-links">
+   <ul >
+     <li>Quick Links</li>
+     <li>Contacts</li>
+     <li>Help</li>
+     <li>Site Map</li>
+     <li>Careers</li>
+   </ul>
+ </div>
+ -->
+  <div class="container">
+
+    <br>
+    <div class="social">
+      <ul>
+        <li class="list">
+          <a href="https://wwww.facebook.com" target="_blank">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span class="fab fa-facebook-f" aria-hidden="true"></span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="https://twitter.com/home" target="_blank">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span class="fab fa-twitter" aria-hidden="true"></span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="https://www.instagram.com/" target="_blank">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span class="fab fa-instagram" aria-hidden="true"></span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="https://www.github.com/" target="_blank">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span class="fab fa-github" aria-hidden="true"></span>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <p id='authors'>   <a href='https://www.github.com/lyubodias' target="_blank"> Lyubomir Dias • </a> <a href='https://github.com/Deepbiswas1993' target="_blank"> Deep Biswas </a> </p>
+  </div>
+
+
 </div>
