--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,8 +12,9 @@
   width: 150px;
 }
 .nav-logo {
-  width: 150px;
-  height: 10vh;
+  margin-top: 6px;
+  width: 200px;
+  height: 9vh;
   float: left;
 }
 // -----------------------------------------------
