--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
     </div>
     <div class="col-5 ">
       <div class="box1">
-    <%= image_tag "Uganda-Organised-Chaos.jpg", class: "box-image" %>
+    <%= image_tag "banner-img.jpg", class: "box-image" %>
         <div class="text-inner">
           <p>Lorem ipsum, dolor sit.</p>
         </div>
@@ -55,7 +55,7 @@
     </div>
     <div class="col-3">
       <div class="box3">
-        <%= image_tag "banner-img.jpg", class: "box-image" %>
+        <%= image_tag "Kathmandu-Business.jpg", class: "box-image" %>
         <div class="text-inner">
           <p>Lorem ipsum, dolor sit.</p>
         </div>
