--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
     <div class="line"></div>
     <div class="line"></div>
   </div>
-  <div>        <%= image_tag "output-onlinepngtools.png", class: "nav-logo" %>
+  <div>        <%= image_tag "logo-blue.png", class: "nav-logo" %>
 </div>
   <ul class="nav-links">
 
