--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,13 +10,13 @@
   <div class="row mt-5">
     <div class="col-7">
       <div class="box">
-        <%= image_tag "https://images.unsplash.com/photo-1520052203542-d3095f1b6cf0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80", class: "box-image-long" %>
+        <%= image_tag "China-Agriculture.jpg", class: "box-image-long" %>
         <div class="text-inner-box">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit optio dolorum assumenda libero aut placeat.</p>
         </div>
       </div>
       <div class="box">
-        <%= image_tag "https://images.unsplash.com/photo-1520052203542-d3095f1b6cf0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80", class: "box-image-long" %>
+        <%= image_tag "Rwanda-Landscape.jpg", class: "box-image-long" %>
         <div class="text-inner">
           <p>Lorem ipsum, dolor sit.</p>
         </div>
