--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -38,139 +38,93 @@
 
   a {
     text-decoration: none;
-    color: black;
+    color: $main-color;
     font-size: 16px;
   }
 }
 
 
 
-ul li.list {
-  position: relative;
-  list-style-type: none;
-  width: 40px;
-  height: 40px;
-  margin: 0 10px;
-  transform: rotate(-30deg) skew(25deg);
-
-   @media (max-width: 540px) {
-    margin: 0px 2px 0px 12px;
-    width: 25px;
-    height: 25px;
-    }
-}
-
-ul li span {
-  border-radius: 5px;
+.social {
   position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+.social li {
+  list-style: none;
+}
+.social li a {
+  display: block;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  text-align: center;
+  text-decoration: none;
+  color: $main-color;
+  margin: 0 20px;
+  transition: 0.5s;
+}
+.social li a span {
+  position: absolute;
+  transition: transform 0.5s;
+}
+.social li a span:nth-child(1),
+.social li a span:nth-child(3) {
+  width: 100%;
+  height: 1px;
+  background: $main-color;
+}
+.social li a span:nth-child(1) {
   top: 0;
   left: 0;
-  width: 80%;
-  height: 80%;
-  background: #000;
-  transition: 0.5s;
-  display: flex!important;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 16px!important;
-
-  @media (max-width: 540px) {
-    font-size: 10px !important;
-    width: 50%;
-    height: 50%;
-    margin: 0;
-  }
+  transform-origin: right;
+}
+.social li a:hover span:nth-child(1) {
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.5s;
+}
+.social li a span:nth-child(3) {
+  bottom: 0;
+  left: 0;
+  transform-origin: left;
+}
+.social li a:hover span:nth-child(3) {
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.5s;
 }
 
-ul li.list:hover span:nth-child(5) {
-  transform: translate(40px,-40px);
-  opacity: 1;
+.social li a span:nth-child(2),
+.social li a span:nth-child(4) {
+  width: 1px;
+  height: 100%;
+  background: $main-color;
 }
-
-ul li.list:hover span:nth-child(4) {
-  transform: translate(30px,-30px);
-  opacity: .8;
+.social li a span:nth-child(2) {
+  top: 0;
+  left: 0;
+  transform: scaleY(0);
+  transform-origin: bottom;
 }
-ul li.list:hover span:nth-child(3) {
-  transform: translate(20px,-20px);
-  opacity: .6;
+.social li a:hover span:nth-child(2) {
+  transform-origin: top;
+  transform: scaleY(1);
+  transition: transform 0.5s;
 }
-ul li.list:hover span:nth-child(2) {
-  transform: translate(10px,-10px);
-  opacity: .4;
+.social li a span:nth-child(4) {
+  top: 0;
+  right: 0;
+  transform: scaleY(0);
+  transform-origin: top;
 }
-ul li.list:hover span:nth-child(1) {
-  transform: translate(0px,-0px);
-  opacity: .2;
+.social li a:hover span:nth-child(4) {
+  transform-origin: bottom;
+  transform: scaleY(1);
+  transition: transform 0.5s;
 }
-
-
-ul li.list:nth-child(1) span {
-  background: #2169FA;
-}
-
-ul li.list:nth-child(2) span {
-  background: #1DA2F1;
-}
-
-ul li.list:nth-child(3) span {
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-
-}
-
-ul li.list:nth-child(4) span {
-  background: #000;
-}
-
-.social {
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-}
-
-.footer-img {
-  width: 115px!important;
-  padding-bottom: 12px;
-
-  @media (max-width: 540px) {
-    width: 75px !important;
-    padding-bottom: 4px;
-  }
-}
-
-.extra-links {
-  margin: 0 auto;
-}
-
-.extra-links ul {
-  display: block;
-}
-
-.extra-links li {
-  color: white;
-  font-size: 18px;
-  list-style: none;
-  text-align: left;
-
-  @media (max-width: 540px) {
-    text-align: center;
-  }
-}
-.second {
-  margin-right: 120px;
-}
-
-.height-144 {
-  height: 144px;
-
-  @media (max-width: 540px) {
-    height: 91px;
-  }
-}
-
-
-
-
-
