--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,40 +14,44 @@
 
     <br>
     <div class="social">
-      <ul>
-        <li class="list">
-          <a href="https://wwww.facebook.com" target="_blank">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span class="fab fa-facebook-f" aria-hidden="true"></span>
-          </a>
-        </li>
-        <li class="list">
-          <a href="https://twitter.com/home" target="_blank">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span class="fab fa-twitter" aria-hidden="true"></span>
-          </a>
-        </li>
-        <li class="list">
-          <a href="https://www.instagram.com/" target="_blank">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span class="fab fa-instagram" aria-hidden="true"></span>
-          </a>
-        </li>
-        <li class="list">
-          <a href="https://www.github.com/" target="_blank">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span class="fab fa-github" aria-hidden="true"></span>
-          </a>
-        </li>
-      </ul>
+      <ul class="social">
+      <li>
+        <a href="https://wwww.facebook.com" target="_blank">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <i class="fab fa-facebook-f" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/home" target="_blank">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <i class="fab fa-twitter" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/" target="_blank">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <i class="fab fa-instagram" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/" target="_blank">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <i class="fab fa-linkedin" aria-hidden="true"></i>
+        </a>
+      </li>
+    </ul>
     </div>
 
     <p id='authors'>   <a href='https://www.github.com/lyubodias' target="_blank"> Lyubomir Dias • </a> <a href='https://github.com/Deepbiswas1993' target="_blank"> Deep Biswas </a> </p>
