--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,11 +4,11 @@
     <div class="line"></div>
     <div class="line"></div>
   </div>
-  <div>        <%= image_tag "logo-real.png", class: "nav-logo" %>
+  <div>        <%= image_tag "output-onlinepngtools.png", class: "nav-logo" %>
 </div>
   <ul class="nav-links">
 
-    <li><a href="#">Strategy</a></li>
+    <li><a href="#strategy">Strategy</a></li>
     <li><a href="#">Team</a></li>
     <li><a href="#contacts">Contacts</a></li>
   </ul>
