--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,6 +29,9 @@ html {
     padding-bottom: 100px;
   }
 }
+.banner-logo {
+  width: 800px;
+}
 .text-big {
   width: 100%;
   margin: 50px auto;
@@ -174,7 +177,16 @@ position: fixed;
 bottom: 10px;
 right: 20px;
 }
+// ---------map pop ups---------
+.mapboxgl-popup {
+  max-width: 200px;
+}
 
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+// -------------------------------------
 
 
 
