--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
       <div class="box">
         <%= image_tag "China-Agriculture.jpg", class: "box-image-long" %>
         <div class="text-inner-box">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit optio dolorum assumenda libero aut placeat.</p>
+          <p>hello Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit optio dolorum assumenda libero aut placeat.</p>
         </div>
       </div>
       <div class="box">
