--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,8 +23,7 @@
         </div>
       </div>
       <div class="box">
-        <%= cl_image_tag("joajmabi3oh9xgvp1cpc", class: "box-image-long",
-      width: 400, height: 300, crop: :fill) %>
+
         <div class="text-inner">
           <p>Hello Deep</p>
         </div>
@@ -106,11 +105,8 @@ We support philanthropists with their deepest passions. Having a vision is one t
     <li>SW1U 1TE</li>
     <li>UK</li>
   </ul>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4540.910021428549!2d-0.07321167979610345!3d51.53054558342074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc10335ef69b7113!2sLe%20Wagon%20London!5e0!3m2!1sbg!2suk!4v1601151613944!5m2!1sbg!2suk" width="600" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
-  <div id="map"
-     style="width: 50%; height: 200px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['pk.eyJ1IjoibHl1Ym9kaWFzIiwiYSI6ImNrZmpjeTNqYTFoMWwyeW8zOHhmYzRzdXgifQ.7FEknlXhw9VnKxDOKSBJDw'] %>"></div>
 </div>
 
 
