--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 <div class="banner">
     <%= video_tag "video-banner.MP4", autoplay: :autoplay, loop: :loop, muted: :muted, id: "myVideo", playsinline: true %>
 
-     <%= image_tag "logo-transparent.png", class: "banner-logo" %>
+     <%= image_tag "logo-transparent1.png", class: "banner-logo" %>
 
   <!-- <h1 class="big-text">Biswas <br> Social Impact Advisory</h1> -->
 </div>
