--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,129 +1,44 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background:#e4eff1;
-  height: 110px;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 150px;
-}
 .nav-logo {
-  margin-top: 6px;
-  width: 200px;
-  height: 9vh;
+  height: 60px;
   float: left;
 }
-// -----------------------------------------------
-
-nav {
-  height: 10vh;
-  background-color: $main-color;
-}
-.nav-links {
-  display: flex;
-  list-style: none;
-  width: 50%;
-  height: 100%;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: auto;
-
-}
-.nav-links li a {
-  color: $second-color;
-  text-decoration: none;
+.nav-bar {
+  text-align: right;
+  height: 70px;
+  line-height: 70px;
 }
 
-@media screen and (max-width: 768px) {
-  .line {
-    width: 30px;
-    height: 3px;
-    margin: 5px;
-    background-color: $second-color;
-  }
-
-  .hamburger {
-    position: absolute;
-    cursor: pointer;
-    right: 5%;
-    top: 50%;
-    transform: translate(-5%, -50%);
-    z-index: 2;
-  }
-
-  nav {
-    position: relative;
-  }
-
-  .nav-links {
-    position: fixed;
-    background-color: $main-color;
+.menu {
+    margin-bottom: 30px;
+    text-align: center;
+    max-width: 100%;
     height: 100vh;
-    width: 100%;
-    flex-direction: column;
-    clip-path: circle(100px at 90% -10%);
-    -webkit-clip-path: circle(100px at 90% -10%);
-    transition: all 1s ease-out;
-  }
-
-  .nav-links.opne {
-    clip-path: circle(1000px at 90% -10%);
-    -webkit-clip-path: circle(1000px at 90% -10%);
-  }
-
-  .nav-link li {
-    opacity: 0;
-  }
-
-  .nav-links li a {
-    font-size: 25px;
-  }
-
-  .nav-links li:nth-child(1) {
-    transition: all 0.5s ease 0.2s;
-  }
-
-   .nav-links li:nth-child(2) {
-    transition: all 0.5s ease 0.4s;
-  }
-
-   .nav-links li:nth-child(3) {
-    transition: all 0.5s ease 0.6s;
-  }
-
-  li.fade {
-    opacity: 1;
-  }
+    display: none;
+    background-color: rgba(240, 240, 240, 0.85);
+    a {
+      text-decoration: none;
+      color: $main-color;
+      margin: 0 10px;
+      line-height: 70px;
+      clear: right;
+      display: block;
+      font-size: 34px;
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.label-nav {
+  margin-right: 40px;
+  font-size: 40px;
+  line-height: 70px;
+  color: $main-color;
+  width: 26px;
+  float: right;
+  display: block;
+  cursor: pointer;
+}
+#toggle {
+  display: none;
+}
+#toggle:checked + .menu {
+    display: block;
+  }
 
