--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,17 @@
 .nav-logo {
-  height: 60px;
+  height: 6.7vh;
+  width: 171px;
   float: left;
+  margin-top: 14px;
+  margin-left: 13px;
 }
 .nav-bar {
   text-align: right;
-  height: 70px;
+  height: 10vh;
   line-height: 70px;
+  background-color: #066579;
+  border-bottom: red;
+  border-width: 2px;
 }
 
 .menu {
@@ -14,7 +20,7 @@
     max-width: 100%;
     height: 100vh;
     display: none;
-    background-color: rgba(240, 240, 240, 0.85);
+    background-color: rgba(255, 255, 255, 0.55);
     a {
       text-decoration: none;
       color: $main-color;
@@ -26,10 +32,11 @@
     }
 }
 .label-nav {
+  margin-top: 6px;
   margin-right: 40px;
   font-size: 40px;
   line-height: 70px;
-  color: $main-color;
+  color: $second-color;
   width: 26px;
   float: right;
   display: block;
