--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,10 @@
-
+<div class="my_app_container">
 <!-- ------------back to top--------- -->
 <a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
 <!-- --------------------- -->
 <div class="banner">
     <%= video_tag "video-banner.MP4", autoplay: :autoplay, loop: :loop, muted: :muted, id: "myVideo", playsinline: true %>
-
-     <%= image_tag "logo-transparent1.png", class: "banner-logo" %>
-
+    <%= image_tag "logo-transparent1.png", class: "banner-logo" %>
   <!-- <h1 class="big-text">Biswas <br> Social Impact Advisory</h1> -->
 </div>
 <div class="text-big" data-aos="fade-right">
@@ -19,13 +17,13 @@
       <div class="box">
         <%= image_tag "China-Agriculture.jpg", class: "box-image-long" %>
         <div class="text-inner-box">
-          <p>hello Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit optio dolorum assumenda libero aut placeat.</p>
+          <p>hello ISTVAN Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit optio dolorum assumenda libero aut placeat.</p>
         </div>
       </div>
       <div class="box">
-
+        <%= image_tag "Turkey-Cityscape.jpg", class: "box-image-long" %>
         <div class="text-inner">
-          <p>Hello Deep</p>
+          <p>Lorem ipsum, dolor sit.</p>
         </div>
       </div>
     </div>
@@ -42,7 +40,9 @@
   <div class="row mb-5">
     <div class="col-3">
       <div class="box3">
-        <%= image_tag "China-Boats.jpg", class: "box-image" %>
+        <%#= image_tag "China-Boats.jpg", class: "box-image" %>
+        <%= cl_image_tag("joajmabi3oh9xgvp1cpc",
+        width: 400, height: 300, crop: :fill) %>
         <div class="text-inner">
           <p>Lorem ipsum, dolor sit.</p>
         </div>
@@ -105,8 +105,12 @@ We support philanthropists with their deepest passions. Having a vision is one t
     <li>SW1U 1TE</li>
     <li>UK</li>
   </ul>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4540.910021428549!2d-0.07321167979610345!3d51.53054558342074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc10335ef69b7113!2sLe%20Wagon%20London!5e0!3m2!1sbg!2suk!4v1601151613944!5m2!1sbg!2suk" width="600" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
+  <div id="map"
+     style="width: 50%; height: 200px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['pk.eyJ1IjoibHl1Ym9kaWFzIiwiYSI6ImNrZmpjeTNqYTFoMWwyeW8zOHhmYzRzdXgifQ.7FEknlXhw9VnKxDOKSBJDw'] %>"></div>
 </div>
 
 
+</div>
