--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -30,6 +30,9 @@
       display: block;
       font-size: 34px;
     }
+    a:hover{
+    color: #480355;
+    }
 }
 .label-nav {
   margin-top: 6px;
