media query, need some more work

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,4 @@
 <div class="footer mt-auto d-flex justify-content-space-between">
-
-<!--  <div class="extra-links">
-   <ul >
-     <li>Quick Links</li>
-     <li>Contacts</li>
-     <li>Help</li>
-     <li>Site Map</li>
-     <li>Careers</li>
-   </ul>
- </div>
- -->
   <div class="container">
 
     <br>
@@ -57,5 +46,5 @@
     <p id='authors'>   <a href='https://www.github.com/lyubodias' target="_blank"> Lyubomir Dias • </a> <a href='https://github.com/Deepbiswas1993' target="_blank"> Deep Biswas </a> </p>
   </div>
 
-
+  <p class="powered"><a href="https://www.db-uk.net/" target="_blank">Powered by:  <strong>db</strong> </a></p>
 </div>
