--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,27 +1,12 @@
-<!-- <nav>
-  <div class="hamburger">
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
-  </div>
-  <div>
-
-</div>
-  <ul class="nav-links">
-
-    <li><a href="#strategy">Strategy</a></li>
-    <li><a href="#">Team</a></li>
-    <li><a href="#contacts">Contacts</a></li>
-  </ul>
-</nav>
- -->
 <div class="nav-bar">
   <%= image_tag "logo-transparent1.png", class: "nav-logo" %>
   <label for="toggle" class="label-nav">&#9776;</label>
   <input type="checkbox" id="toggle">
   <div class="menu">
     <a href="#strategy">Strategy</a>
+    <a href="#">Blog</a>
     <a href="#">Team</a>
     <a href="#contacts">Contacts</a>
   </div>
 </div>
+
