--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,16 +1,10 @@
 .footer{
   text-align: center;
-  padding: 10px;
+  padding: 50px 0;
   flex-wrap: wrap;
   width: 100%;
-
-  p {
-    color: black;
-
-  @media (max-width: 540px) {
-      margin-bottom: 0px;
-    }
-  }
+  background: $main-color;
+  position: relative;
 
   @media (max-width: 540px) {
     padding: 8px;
@@ -24,6 +18,17 @@
 }
 }
 
+.powered {
+  position: absolute;
+  bottom: 0;
+  left: 10px;
+
+  a  {
+    text-decoration: none;
+    color: $second-color;
+    font-size: 14px;
+  }
+}
 
 #authors {
   font-size: 8px;
@@ -38,12 +43,10 @@
 
   a {
     text-decoration: none;
-    color: $main-color;
+    color: $second-color;
     font-size: 16px;
   }
 }
-
-
 
 .social {
   position: absolute;
@@ -65,7 +68,7 @@
   font-size: 20px;
   text-align: center;
   text-decoration: none;
-  color: $main-color;
+  color: $second-color;
   margin: 0 20px;
   transition: 0.5s;
 }
@@ -77,7 +80,7 @@
 .social li a span:nth-child(3) {
   width: 100%;
   height: 1px;
-  background: $main-color;
+  background: $second-color;
 }
 .social li a span:nth-child(1) {
   top: 0;
@@ -104,7 +107,7 @@
 .social li a span:nth-child(4) {
   width: 1px;
   height: 100%;
-  background: $main-color;
+  background: $second-color;
 }
 .social li a span:nth-child(2) {
   top: 0;
@@ -128,3 +131,21 @@
   transform: scaleY(1);
   transition: transform 0.5s;
 }
+// -------------media query breakpoints-------
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .powered {
+    position: absolute;
+    bottom: 0;
+    left: 40%;
+  }
+  #authors {
+    margin: 30px;
+  }
+  .social {
+    margin-top: 20px;
+  }
+}
+// -----------------------------------------------------------------
+
