--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,23 +15,28 @@
 }
 
 .menu {
-    margin-bottom: 30px;
     text-align: center;
     max-width: 100%;
     height: 100vh;
     display: none;
     background-color: rgba(255, 255, 255, 0.55);
+
     a {
+      border-top: 3px solid $main-color;
+      border-bottom: 3px solid $main-color;
+      padding: 20px;
       text-decoration: none;
       color: $main-color;
-      margin: 0 10px;
+      margin: 160px 60px;
       line-height: 70px;
       clear: right;
-      display: block;
-      font-size: 34px;
+      display: inline-block;
+      font-size: 36px;
     }
     a:hover{
     color: #480355;
+    border-top: 3px solid #480355;
+    border-bottom: 3px solid #480355;
     }
 }
 .label-nav {
@@ -51,4 +56,81 @@
 #toggle:checked + .menu {
     display: block;
   }
+// -------------media query breakpoints-------
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .nav-logo {
+    width: 150px;
+    margin-top: 10px;
+    margin-left: 0;
+    }
+    .label-nav {
+      font-size: 36px;
+      line-height: 50px;
+      width: 20px;
+    }
+    .menu a {
+      border: none;
+      margin: 20px 0;
+      line-height: 20px;
+      clear: right;
+      display: block;
+      font-size: 20px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .nav-logo {
+    height: 6.7vh;
+    width: 140px;
+    float: left;
+    margin-top: 14px;
+    margin-left: 0;
+  }
+  .label-nav {
+    margin-top: 6px;
+    margin-right: 40px;
+    font-size: 40px;
+    line-height: 60px;
+    width: 20px;
+  }
+  .menu a {
+    border: none;
+    margin: 32px 0;
+    line-height: 20px;
+    clear: right;
+    display: block;
+    font-size: 24px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .menu a {
+    border-top: 2px solid $main-color;
+    border-bottom: 2px solid $main-color;
+    padding: 16px;
+    margin: 250px 12px;
+    line-height: 70px;
+    clear: right;
+    display: inline-block;
+    font-size: 21px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .menu a {
+    border-top: 3px solid $main-color;
+    border-bottom: 3px solid $main-color;
+    padding: 16px 20px;
+    margin: 230px 22px;
+    line-height: 70px;
+    clear: right;
+    display: inline-block;
+    font-size: 30px;
+  }
+}
+// -----------------------------------------------------------------
