--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@ body {
 html {
   scroll-behavior: smooth;
 }
-  #myVideo {
+#myVideo {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -16,30 +16,20 @@ html {
 }
 
 .banner {
-  // background-image:linear-gradient(rgba(27,36,81,.6), rgba(27,36,81,.4)),url("banner-img.jpeg");
   display: flex;
   justify-content: center;
   align-items: center;
-  background-size: cover;
-  background-position: center;
   height: 100vh;
-  width: 100%;
   text-align: center;
-  h1 {
-    color: $second-color;
-    font-size: 5em;
-    padding-bottom: 100px;
-  }
+  position: relative;
 }
 .banner-logo {
   width: 500px;
-  margin-bottom: 40px;
+  position: absolute;
 }
 .text-big {
-  width: 100%;
-  margin: 50px auto;
   text-align: center;
-  padding: 100px;
+  padding: 80px;
   h2 {
     font-size: 4.5em;
     color: $main-color;
@@ -50,13 +40,15 @@ html {
     opacity: 0.5;
   }
 }
-// css grid of pics
 
-.photos-divs {
-  background-size: cover;
-  background-position: center;
+.pic-1 {
   width: 100%;
-  height: 600px;
+  height: auto;
+}
+
+//--------- css grid of pics-----------------
+.big-text {
+  font-size: 7em;
 }
 .box-image-long {
   width: 100%;
@@ -64,23 +56,6 @@ html {
   transition: all 0.5s ease-in-out;
   transform: scale(1);
 }
-
-.pic-1 {
-background-image:url("Rwanda-Landscape.jpg");
-}
-.pic-2 {
-background-image: url("Rwanda-Traditional-Dance.jpg");
-}
-.pic-3 {
-background-image: url("Tunisia-Market.jpg");
-}
-.pic-4 {
-background-image: url("Tunisia-Skyline.jpg");
-}
-.big-text {
-font-size: 7em;
-}
-
 .box-image {
   width: 100%;
   height: 100%;
@@ -162,16 +137,26 @@ font-size: 7em;
   }
 
 
-// contacts div
+// ---------------------contacts div----------------------
+.map-wrapper {
+  border:5px solid $main-color;
+  border-radius: 5px;
+  height:230px;
+  width: 410px;
+}
 .contacts {
   display: flex;
   color: $main-color;
+  justify-content: space-between;
+  padding: 20px;
+  background: rgb(176,192,198);
   ul {
     padding: 20px;
+    margin-left: 20px;
     list-style: none;
   }
 }
-// ------back to top------
+// ------back to top---------------------------
 .back-to-top {
 color: $main-color;
 font-size: 4em;
@@ -180,16 +165,148 @@ position: fixed;
 bottom: 10px;
 right: 20px;
 }
-// ---------map pop ups---------
-.mapboxgl-popup {
-  max-width: 200px;
+// -------------media query breakpoints-------
+.example {
+  padding: 20px;
+  color: white;
+
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .example {background: red;}
+   .banner-logo {
+    width: 240px;
+  }
+  .text-big {
+    padding: 10px;
+    h2 {
+      font-size: 1.4em;
+    }
+    p {
+      font-size: 0.9em;
+    }
+  }
+  .back-to-top {
+    font-size: 2.6em;
+  }
+  .map-wrapper {
+    border:5px solid $main-color;
+    height:230px;
+    width: 310px;
+    margin: 0 auto;
+    .map-widht {
+      width: 300px;
+    }
+  }
+  .contacts {
+    display: block;
+    padding: 20px;
+    text-align: center;
+    ul {
+      padding: 20px;
+    }
+  }
 }
 
-.mapboxgl-popup-content {
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .example {background: green;}
+   .banner-logo {
+    width: 300px;
+  }
+  .text-big {
+    padding: 20px;
+    h2 {
+      font-size: 2.5em;
+    }
+    p {
+      font-size: 1.2em;
+    }
+  }
+  .back-to-top {
+    font-size: 2.9em;
+  }
+  .map-wrapper {
+    border:5px solid $main-color;
+    height:230px;
+    width: 410px;
+    margin: 0 auto;
+  }
+  .contacts {
+    display: block;
+    padding: 20px;
+    text-align: center;
+    ul {
+      padding: 20px;
+    }
+  }
 }
-// -------------------------------------
 
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .example {background: blue;}
+  .banner-logo {
+    width: 400px;
+  }
+  .text-big {
+    padding: 30px;
+    h2 {
+      font-size: 3.5em;
+    }
+    p {
+      font-size: 1.5em;
+    }
+  }
+  .back-to-top {
+    font-size: 3.2em;
+  }
+  .map-wrapper {
+    border:5px solid $main-color;
+    height:230px;
+    width: 410px;
+    margin: 0 auto;
+  }
+  .contacts {
+    display: block;
+    padding: 20px;
+    text-align: center;
+    ul {
+      padding: 20px;
+    }
+  }
 
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .example {background: orange;}
+  .banner-logo {
+    width: 400px;
+  }
+  .text-big {
+    padding: 80px;
+  }
+  .back-to-top {
+    font-size: 3.5em;
+  }
+  .map-wrapper {
+    border:5px solid $main-color;
+    border-radius: 5px;
+    height:230px;
+    width: 410px;
+  }
+  .contacts {
+    display: flex;
+    color: $main-color;
+    justify-content: space-between;
+    padding: 20px;
+    background: rgb(176,192,198);
+    text-align: left;
+    ul {
+      padding: 20px;
+      list-style: none;
+    }
+  }
+}
+// -----------------------------------------------------------------
 
