--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,10 +2,10 @@
 <!-- ------------back to top--------- -->
 <a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
 <!-- --------------------- -->
+<p class="example">Resize the browser window to see how the background color of this paragraph changes on different screen sizes.</p>
 <div class="banner">
     <%= video_tag "video-banner.MP4", autoplay: :autoplay, loop: :loop, muted: :muted, id: "myVideo", playsinline: true %>
     <%= image_tag "logo-transparent1.png", class: "banner-logo" %>
-  <!-- <h1 class="big-text">Biswas <br> Social Impact Advisory</h1> -->
 </div>
 <div class="text-big" data-aos="fade-right">
   <h2>We believe private equity is about people, not transactions.</h2>
@@ -73,23 +73,31 @@
 We support philanthropists with their deepest passions. Having a vision is one thing, but knowing how to execute is another.</p>
 </div>
 <!-- -------------- -->
-<div class="photos-divs pic-1" data-aos="flip-left">></div>
+<div data-aos="flip-left">
+    <%= image_tag "Rwanda-Landscape.jpg", class: "pic-1" %>
+</div>
 <div class="text-big" data-aos="fade-left">
   <h2>Trust</h2>
   <p>WE EARN IT.</p>
 </div>
 
-<div class="photos-divs pic-2" data-aos="flip-right">></div>
+<div class="photos-divs pic-2" data-aos="flip-right">
+  <%= image_tag "Rwanda-Traditional-Dance.jpg", class: "pic-1" %>
+</div>
 <div class="text-big" data-aos="fade-right">
   <h2>Partnership </h2>
   <p>WE EMPHASIZE IT.</p>
 </div>
-<div class="photos-divs pic-3" data-aos="flip-left">></div>
+<div class="photos-divs pic-3" data-aos="flip-left">
+  <%= image_tag "Tunisia-Market.jpg", class: "pic-1" %>
+</div>
 <div class="text-big" data-aos="fade-left">
   <h2>Value</h2>
   <p>WE HELP YOU CREATE IT.</p>
 </div>
-  <div class="photos-divs pic-4" data-aos="flip-right">></div>
+  <div class="photos-divs pic-4" data-aos="flip-right">
+    <%= image_tag "Tunisia-Skyline.jpg", class: "pic-1" %>
+  </div>
   <!-- contacts div -->
 <div id="contacts" class="contacts">
   <ul>
@@ -105,12 +113,7 @@ We support philanthropists with their deepest passions. Having a vision is one t
     <li>SW1U 1TE</li>
     <li>UK</li>
   </ul>
-
-  <div id="map"
-     style="width: 50%; height: 200px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['pk.eyJ1IjoibHl1Ym9kaWFzIiwiYSI6ImNrZmpjeTNqYTFoMWwyeW8zOHhmYzRzdXgifQ.7FEknlXhw9VnKxDOKSBJDw'] %>"></div>
-</div>
-
-
+    <div class="map-wrapper">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5158.150982926875!2d-0.07869063723315713!3d51.531863980876366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc10335ef69b7113!2sLe%20Wagon%20London!5e0!3m2!1sen!2suk!4v1601233864936!5m2!1sen!2suk" width="400" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="map-widht"></iframe>
+    </div>
 </div>
