--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -32,7 +32,7 @@
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/" target="_blank">
+        <a href="https://www.linkedin.com/company/biswas-social-impact-advisory/" target="_blank">
           <span></span>
           <span></span>
           <span></span>
