--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,7 @@
   <label for="toggle" class="label-nav">&#9776;</label>
   <input type="checkbox" id="toggle">
   <div class="menu">
+    <!-- <span class="x-hamburger">+</span> -->
     <a href="#strategy">Strategy</a>
     <a href="#">Blog</a>
     <a href="#">Team</a>
