--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -66,6 +66,7 @@
       font-size: 36px;
       line-height: 50px;
       width: 20px;
+      color: white;
     }
     .menu a {
       border: none;
